[project]
name = "dagster-delta-repo"
version = "0.5.8"
description = "Dagster deltalake implementation for Polars and PyArrow with read, write and MERGE support"
requires-python = ">=3.10"
authors = [
    { name = "Gian Violi", email = "96206151+gfvioli@users.noreply.github.com" },
    { name = "Ion Koutsouris", email = "15728914+ion-elgreco@users.noreply.github.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "dagster",
    "deltalake",
    "delta",
    "datalake",
    "pyarrow",
    "polars",
    "io manager",
    "databricks",
    "unity catalog",
]
dependencies = ["dagster-delta", "dagster-unity-catalog-polars"]

[tool.uv.workspace]
members = ["libraries/*"]

[tool.uv.sources]
dagster-delta = { workspace = true }
dagster-unity-catalog-polars = { workspace = true }

[dependency-groups]

dev = [
    "polars>=1.37.0",
    "deltalake>=1.2.1",
    "pyarrow<=18.0.0",
    "pyright==1.1.393",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
